// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commandLine \`$ \` is not command: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "$ ",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine \`$\` is not command: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "$",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine \`$s\` is not command: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "$not command",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine Simple command with $: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "$ command",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine Simple command with %: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "symbol": "%",
        "text": "command",
        "type": "commandLine",
      },
    ],
    "type": "line",
  },
]
`;
